force-app/main/default/objects/Campaign/fields/Attendance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Cost__c</fullName>
    <label>Attendance Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>