force-app/main/default/objects/Campaign/fields/Attendance_Exhibit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Exhibit_Cost__c</fullName>
    <label>Exhibit Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>