force-app/main/default/objects/Campaign/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>TOK Attendee(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>