force-app/main/default/objects/Campaign/fields/Booth_Costs__c.field-meta.xml
<CustomField>
    <fullName>Booth_Costs__c</fullName>
    <description>Furniture, carpeting, etc.</description>
    <inlineHelpText>This includes cost of table, chairs, wastebasket, carpet, etc.</inlineHelpText>
    <label>Booth Costs</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>