force-app/main/default/objects/Campaign/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Number of Converted Leads Divided by Total Number of Leads</description>
    <formula>NumberOfConvertedLeads /  NumberOfLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Converted Leads Divided by Total Number of Leads</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>