force-app/main/default/objects/Campaign/fields/Cost_details__c.field-meta.xml
<CustomField>
    <fullName>Cost_details__c</fullName>
    <inlineHelpText>This is where you should itemize any miscellaneous costs that area associated with the conference that are monetarily represented in the Miscellaneous Costs fields.</inlineHelpText>
    <label>Cost details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>