force-app/main/default/objects/Campaign/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <formula>Attendance_Exhibit_Cost__c  +  Airfare__c  +  S_H__c  +  Booth_Costs__c  +  Materials_Cost__c  +  Per_Diem__c  +  Misc_Cost__c +  Hotel_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>