force-app/main/default/objects/Campaign/fields/Five9__Five9Password__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9Password__c</fullName>
    <label>Five9 User Password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>