force-app/main/default/objects/Campaign/fields/five9_lsp2__Five9_List_Config__c.field-meta.xml
<CustomField>
    <fullName>five9_lsp2__Five9_List_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Five9 List Config</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>five9_lsp2__Five9_List_Config__c.five9_lsp2__Is_Deleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>five9_lsp2__Five9_List_Config__c.five9_lsp2__Is_Enabled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>five9_lsp2__Five9_List_Config__c.five9_lsp2__Object_Name__c</field>
            <operation>equals</operation>
            <value>contact</value>
        </filterItems>
        <filterItems>
            <field>five9_lsp2__Five9_List_Config__c.five9_lsp2__Object_Name__c</field>
            <operation>equals</operation>
            <value>lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>five9_lsp2__Five9_List_Config__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>