force-app/main/default/objects/Campaign/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>