force-app/main/default/objects/Campaign/fields/Hotel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cost__c</fullName>
    <label>Hotel Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>