force-app/main/default/objects/Campaign/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials Sent</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>