force-app/main/default/objects/Campaign/fields/Materials_Cost__c.field-meta.xml
<CustomField>
    <fullName>Materials_Cost__c</fullName>
    <label>Materials Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>