force-app/main/default/objects/Campaign/fields/Materials_Used__c.field-meta.xml
<CustomField>
    <fullName>Materials_Used__c</fullName>
    <inlineHelpText>Please document how many of the materials sent were actually used. This will help with estimating what is actually needed for future conferences.</inlineHelpText>
    <label>Materials Used</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>