force-app/main/default/objects/Campaign/fields/Misc_Cost__c.field-meta.xml
<CustomField>
    <fullName>Misc_Cost__c</fullName>
    <inlineHelpText>Please include any miscellaneous costs such as electricity, wireless Internet, lead retrieval, etc. Include details in Cost Details field.</inlineHelpText>
    <label>Misc Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>