force-app/main/default/objects/Campaign/fields/Networking_Events__c.field-meta.xml
<CustomField>
    <fullName>Networking_Events__c</fullName>
    <inlineHelpText>Please include any networking events and whether TOK is sponsoring or just attending. Cost for event should be included in T&amp;E field but please note specific cost here as well.</inlineHelpText>
    <label>Networking Events</label>
    <length>150</length>
    <type>Text</type>
</CustomField>