force-app/main/default/objects/Campaign/fields/of_attendees__c.field-meta.xml
<CustomField>
    <fullName>of_attendees__c</fullName>
    <label># of attendees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>