force-app/main/default/objects/Campaign/fields/of_exhibitors__c.field-meta.xml
<CustomField>
    <fullName>of_exhibitors__c</fullName>
    <label># of exhibitors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>