force-app/main/default/objects/Campaign/fields/Overall_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_Close_Rate__c</fullName>
    <description>Number of Won Opportunities divided by the Number of Leads</description>
    <formula>NumberOfWonOpportunities /  NumberOfLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Won Opportunities divided by the Number of Leads</inlineHelpText>
    <label>Overall Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>