force-app/main/default/objects/Campaign/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <label>T&amp;E</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>