force-app/main/default/objects/Campaign/fields/Pre_conference_activity__c.field-meta.xml
<CustomField>
    <fullName>Pre_conference_activity__c</fullName>
    <label>Pre-Conference Activity (if applicable)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>