force-app/main/default/objects/Campaign/fields/S_H__c.field-meta.xml
<CustomField>
    <fullName>S_H__c</fullName>
    <label>S&amp;H</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>