force-app/main/default/objects/Campaign/fields/Sponsorship_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Cost__c</fullName>
    <label>Sponsorship Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>