force-app/main/default/objects/Campaign/recordTypes/Simply_Retirement.recordType-meta.xml
<RecordType>
    <fullName>Simply_Retirement</fullName>
    <active>true</active>
    <label>Simply Retirement</label>
</RecordType>