force-app/main/default/objects/Campaign/recordTypes/Ubiquity.recordType-meta.xml
<RecordType>
    <fullName>Ubiquity</fullName>
    <active>true</active>
    <label>Ubiquity</label>
</RecordType>